 2012-03-19 09:09  alexpeshkoff 
   M src/burp/burp.cpp
Postfix for AV due to CORE-3649

 2012-03-18 22:22  asfernandes 
   M src/dsql/parse.y
Fix a parser conflict.

 2012-03-18 22:22  asfernandes 
   M src/dsql/DdlNodes.epp
   M src/dsql/DdlNodes.h
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
Refactor nod_def_index.

 2012-03-18 21:37  asfernandes 
   M src/dsql/DdlNodes.epp
   M src/dsql/DdlNodes.h
   M src/dsql/DsqlCompilerScratch.cpp
   M src/dsql/StmtNodes.cpp
   M src/dsql/ddl.cpp
   M src/dsql/metd.epp
   M src/dsql/metd_proto.h
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
Refactor DDL nodes removing references to non-value/-rse dsql_nod.

 2012-03-17 16:06  asfernandes 
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/jrd/Optimizer.cpp
   M src/jrd/opt.cpp
Simplificate CastNode. There is no need for a format there.

 2012-03-17 15:35  asfernandes 
   M src/remote/server/server.cpp
   M src/yvalve/YObjects.h
   M src/yvalve/utl.cpp
   M src/yvalve/why.cpp
Misc.

 2012-03-17 02:26  asfernandes 
   M src/common/IntlParametersBlock.cpp
   M src/common/db_alias.cpp
   M src/common/db_alias.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/gen.cpp
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/TempSpace.cpp
   M src/jrd/TempSpace.h
   M src/jrd/UserManagement.cpp
   M src/jrd/btr.cpp
Misc.

 2012-03-17 02:26  asfernandes 
   M src/common/isc_file.cpp
Corrections.

 2012-03-16 17:10  alexpeshkoff 
   A src/common/IntlParametersBlock.cpp
   A src/common/IntlParametersBlock.h
   M src/remote/client/interface.cpp
   M src/yvalve/why.cpp
Finished with conversions of all strings in both kinds of SPBs (attach/start) to UTF8

 2012-03-16 17:08  alexpeshkoff 
   M configure.in
   M src/common/isc_file.cpp
System to UTF8 conversion on non-Windows systems

 2012-03-16 17:05  alexpeshkoff 
   M src/jrd/UserManagement.cpp
Misc

 2012-03-16 12:46  alexpeshkoff 
   M src/common/BigInteger.h
Misc
